# cookbook

./: CONTRIBUTING.md  README.md
examples/csv-processor/: README.md  pyproject.toml
examples/csv-processor/src/: plugin.py
examples/github-connector/: README.md  pyproject.toml
examples/github-connector/src/: plugin.py
examples/webhook-listener/: README.md  pyproject.toml
examples/webhook-listener/src/: plugin.py
skills/docker-manager/: SKILL.md
skills/git-worktree/: SKILL.md
skills/jira-triage/: SKILL.md
skills/notion-sync/: SKILL.md
skills/postgres-query/: SKILL.md
