[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-plugin-csv-processor"
version = "0.1.0"
description = "CSV processor plugin for OpenClaw"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "OpenClawHQ Contributors"}]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/OpenClawHQ/cookbook"
Repository = "https://github.com/OpenClawHQ/cookbook"

[tool.setuptools]
packages = ["src"]
