[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-plugin-webhook-listener"
version = "0.1.0"
description = "Webhook listener plugin for OpenClaw"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "OpenClawHQ Contributors"}]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/OpenClawHQ/cookbook"
Repository = "https://github.com/OpenClawHQ/cookbook"

[tool.setuptools]
packages = ["src"]
